--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,23 @@
-# Empty CSS file for your own CSS
+body{
+    background-color: #161616;
+    font-family: 'Roboto', sans-serif;    
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
+
+.title{
+    color: white;
+    margin-top: 30px;
+}
+
+.meteo-icon {
+    margin: auto;
+    margin-top: 30%;
+}
+
+.location{
+    font-size: 30px;
+    color: white;
+    text-decoration: underline;
+}
