Added google map

--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,11 @@ body{
     width: 350px;
     text-align: left;
 }
+
+.weather-map {
+    min-width: 200px;
+    width: 50%;
+    min-height: 200px;
+    height: 80%;
+    border: 1px solid blue;
+}
